--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-i18next": "^16.5.4",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.13.0",
+    "react-toastify": "^11.0.5",
     "socket.io-client": "^4.8.3",
     "yup": "^1.7.1"
   },
