--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.11.2",
+    "@rollbar/react": "^1.0.0",
     "axios": "^1.13.4",
     "bootstrap": "^5.3.8",
     "classnames": "^2.5.1",
@@ -24,6 +25,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.13.0",
     "react-toastify": "^11.0.5",
+    "rollbar": "^2.26.5",
     "socket.io-client": "^4.8.3",
     "yup": "^1.7.1"
   },
